# MetaGPT_Myth-Museum

./: .gitignore  README.md  demo_3_topics.py  generate_video.bat  install.bat  pyproject.toml  requirements.txt  run_streamlit.bat  streamlit_app.py  啟動互動介面.bat
app/: __init__.py  main.py
config/: series_registry.json  sources.yaml  vertex_config.py
core/: __init__.py  config.py  constants.py  db.py  llm.py  logging.py  models.py  textnorm.py
ingest/: __init__.py  factcheck.py  rss.py  wiki.py
metagpt_integration/: __init__.py  actions.py  orchestrator.py  roles.py  schemas.py
notebooks/: myth_generator.ipynb
pipeline/: __init__.py  build_evidence.py  cartoon_myth_generator.py  character_library.py  compose_short.py  export_shorts_pack.py  extract_claims.py  folder_naming.py  generate_scripts.py  generate_short.py  generate_video_short.py  image_quality.py  judge_claim.py  prepare_shorts.py  render_basic_short.py  run_daily.py  select_for_shorts.py  series_overlay.py  shorts_optimizer.py  shotlist_generator.py  storyboard_prompts.py  storyboard_templates.py  tts.py  veo.py  visual_director.py
prompts/: .gitkeep  judge_prompt.txt  script_prompt.txt  shotlist_prompt.txt
scripts/: check_google_creds.py  fix_washington_bg6.py  generate_america_myths.py  generate_davinci_cartoons.py  generate_davinci_mixed.py  generate_davinci_mona_lisa.py  generate_edison_video.py  generate_galaxy_video.py  generate_ninja_v2.py  generate_ninja_video.py  generate_odyssey_video.py  generate_sphinx_video.py  migrate_folders.py  regen_america_single.py  regenerate_edison.py  render_davinci_video.py  test_smart_suggestions.py  test_streamlit_app.py  test_subtitle_guard.py
tests/: __init__.py  test_build_evidence.py  test_db.py  test_export_shorts_pack.py  test_extract_claims.py  test_generate_scripts.py  test_ingest_rss.py  test_judge_claim.py  test_metagpt.py  test_prepare_shorts.py  test_render_basic_short.py  test_select_for_shorts.py  test_tts.py  (+1 more)
(+2 files in other folders)
